--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -17,7 +17,7 @@ reference_node_name: "USA/WA1/2020"
 # align sequences to, colors for strain attributes in auspice, and auspice
 # configuration files.
 files:
-  include: "defaults/include.txt"
+  include: "defaults/include-bulky.txt"
   exclude: "defaults/exclude.txt"
   reference: "defaults/reference_seq.gb"
   outgroup: "defaults/outgroup.fasta" # is this arg still used? file doesn't exist in gh repo
