Add Sam's script for converting non-nextmeta style GISAID downloads

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ scripts/developer_scripts/outputs_new_sequences/
 # SLURM log files
 slurm-*.out
 auspice/ncov_belgium*
+scripts/data_manipulation/gisaid_meta_to_nextstrain/*.tsv
+scripts/data_manipulation/gisaid_meta_to_nextstrain/*.fasta
