--- a/workflow/snakemake_rules/pangolin.yaml
+++ b/workflow/snakemake_rules/pangolin.yaml
@@ -1,114 +1,15 @@
 name: pangolin
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
 dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - attrs=20.3.0=pyhd3deb0d_0
-  - biopython=1.74=py37h0b31af3_0
-  - brotlipy=0.7.0=py37hf967b71_1001
-  - ca-certificates=2020.12.5=h033912b_0
-  - certifi=2020.12.5=py37hf985489_1
-  - cffi=1.14.4=py37hc5b2277_1
-  - chardet=4.0.0=py37hf985489_1
-  - configargparse=1.2.3=pyh9f0ad1d_0
-  - cryptography=3.3.1=py37haf76d9e_1
-  - datrie=0.8.2=py37h60d8a13_1
-  - docutils=0.16=py37hf985489_3
-  - gitdb=4.0.5=py_0
-  - gitpython=3.1.12=pyhd8ed1ab_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=3.4.0=py37hf985489_0
-  - importlib_metadata=3.4.0=hd8ed1ab_0
-  - ipython_genutils=0.2.0=py_1
-  - iqtree=1.6.12=h7475705_1
-  - jsonschema=3.2.0=py_2
-  - jupyter_core=4.7.0=py37hf985489_0
-  - k8=0.2.5=h7475705_0
-  - libblas=3.9.0=7_openblas
-  - libcblas=3.9.0=7_openblas
-  - libcxx=11.0.0=h4c3b8ed_1
-  - libffi=3.3=h046ec9c_2
-  - libgfortran=5.0.0=9_3_0_h6c81a4c_16
-  - libgfortran5=9.3.0=h6c81a4c_16
-  - liblapack=3.9.0=7_openblas
-  - libopenblas=0.3.12=openmp_h54245bb_1
-  - llvm-openmp=11.0.1=h7c73e74_0
-  - mafft=7.475=h0b31af3_0
-  - minimap2=2.17=hbbe82c9_3
-  - nbformat=5.1.2=pyhd8ed1ab_0
-  - ncurses=6.2=h2e338ed_4
-  - numpy=1.19.5=py37hec87de9_1
-  - openssl=1.1.1i=h35c211d_0
-  - pip=19.3.1=py37_0
-  - psutil=5.8.0=py37hf967b71_1
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyrsistent=0.17.3=py37hf967b71_2
-  - pysocks=1.7.1=py37hf985489_3
-  - python=3.7.9=h6c3b2c9_0_cpython
-  - python_abi=3.7=1_cp37m
-  - pyyaml=5.3.1=py37hf967b71_2
-  - ratelimiter=1.2.0=py_1002
-  - readline=8.0=h0678c8f_2
-  - requests=2.25.1=pyhd3deb0d_0
-  - setuptools=49.6.0=py37hf985489_3
-  - six=1.15.0=pyh9f0ad1d_0
-  - smmap=3.0.4=pyh9f0ad1d_0
-  - snakemake-minimal=5.13.0=py_0
-  - sqlite=3.34.0=h17101e1_0
-  - tk=8.6.10=h0419947_1
-  - toposort=1.6=pyhd8ed1ab_0
-  - traitlets=5.0.5=py_0
-  - typing_extensions=3.7.4.3=py_0
-  - urllib3=1.26.2=pyhd8ed1ab_0
-  - wrapt=1.12.1=py37hf967b71_3
-  - xz=5.2.5=haf1e3a3_1
-  - yaml=0.2.5=haf1e3a3_0
-  - zipp=3.4.0=py_0
-  - zlib=1.2.11=h7795811_1010
+  - biopython
+  - iqtree
+  - mafft
+  - numpy
+  - pangolin
+  - python
+  - pyyaml
   - pip:
-    - amply==0.1.4
-    - boto3==1.16.56
-    - botocore==1.19.56
-    - cached-property==1.5.2
-    - click==7.1.2
-    - datafunk==0.0.7
-    - datapackage==1.15.1
-    - decorator==4.4.2
-    - dendropy==4.5.1
-    - epiweeks==2.1.2
-    - et-xmlfile==1.0.1
-    - ijson==3.1.3
-    - isodate==0.6.0
-    - jdcal==1.4.1
-    - jmespath==0.10.0
-    - joblib==1.0.0
-    - jsonlines==2.0.0
-    - jsonpointer==2.0
-    - lineages==2020-05-19
-    - linear-tsv==1.1.0
-    - openpyxl==3.0.6
-    - pandas==1.0.1
-    - pangolearn==2020-12-17
-    - pangolin==2.1.3
-    - pulp==2.4
-    - pycountry==20.7.3
-    - pyparsing==3.0.0b2
-    - pysam==0.16.0.1
-    - python-dateutil==2.8.1
-    - pytools==2020.1
-    - pytz==2020.5
-    - rfc3986==1.4.0
-    - s3transfer==0.3.4
-    - scikit-learn==0.23.1
-    - scipy==1.6.0
-    - sqlalchemy==1.3.22
-    - tableschema==1.20.0
-    - tabulator==1.53.1
-    - threadpoolctl==2.1.0
-    - unicodecsv==0.14.1
-    - wheel==0.36.2
-    - xlrd==2.0.1
-prefix: /Users/slh/miniconda3/envs/pangolin
+    - xlrd
