--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ scripts/developer_scripts/outputs_new_sequences/
 
 # SLURM log files
 slurm-*.out
+scripts/data_manipulation/gisaid_meta_to_nextstrain/
