--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -7,8 +7,8 @@
 conda_environment: "../envs/nextstrain.yaml"
 
 # These are the two main starting files for the run
-sequences: "data/sequences.fasta"
-metadata: "data/metadata.tsv"
+sequences: "data/ALL_SEQUENCES.fasta"
+metadata: "data/ALL_METADATA.tsv"
 
 reference_node_name: "USA/WA1/2020"
 
