WIP VOC build with poorly behaved P.1 clade and strange topology.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ Thumbs.db
 
 narratives/*pdf
 
+# zip archives
+*.zip
 
 # metadata / new seqs scripts
 scripts/developer_scripts/inputs_new_sequences/
