Update gitignore with sequence lists and aux files

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ scripts/developer_scripts/outputs_new_sequences/
 slurm-*.out
 scripts/data_manipulation/gisaid_meta_to_nextstrain/*.tsv
 scripts/data_manipulation/gisaid_meta_to_nextstrain/*.fasta
+
+# specific build files and auxiliary qol files
+*B.1.525*
+data/sequence_lists/B.1.617_base.txt
+data/sequence_lists/B.1.617_belgian.txt
+data/sequence_lists/B.1.617_nonbelgian.txt
