Add new sequences to exclude for imprecise dates or other funkiness.
This commit also adds the verbose flag to IQtree.

--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -60,7 +60,7 @@ mask:
   mask_sites: "13402 24389 24390"
 
 tree:
-  tree-builder-args: "'-ninit 10 -n 4'"
+  tree-builder-args: "'-ninit 10 -n 4 -v'"
 
 # TreeTime settings
 refine:
