Add build parameterizations for all new builds.
This splits up the old "VOC" build into a bunch of lineage-specific builds.

--- a/my_profiles/sars-cov-2-belgium/builds.yaml
+++ b/my_profiles/sars-cov-2-belgium/builds.yaml
@@ -1,30 +1,23 @@
 # Define locations for which builds should be created.
 # For each build we specify a subsampling scheme via an explicit key.
 builds:
-  # first we'll define a country-level build, focused on Switzerland.
-  # we'll define the sampling schemes below
-  demo:
-    # We set the region and country names for the build
-    region: Europe
-    country: Belgium
-    # If we want to have specific files for colors or the auspice_config file *just*
-    # for this build, we can specify this here.
-    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-    # auspice_config: "my_profiles/example_advanced_customization/auspice_config_switzerland_build.json"
-    # We can also set a title for *just* this build.
-    title: "SARS-CoV-2 Sequences in Belgium"
+  # demo:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 Sequences in Belgium"
 
-  B.1.525:
-    region: Europe
-    country: Belgium
-    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-    title: "SARS-CoV-2 B.1.525 Sequences in Belgium"
+  # B.1.525:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 B.1.525 Sequences in Belgium"
 
-  B.1.214:
-    region: Europe
-    country: Belgium
-    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-    title: "SARS-CoV-2 B.1.214 (insertion variant) Sequences in Belgium"
+  # B.1.214:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 B.1.214 (insertion variant) Sequences in Belgium"
 
   B.1.617:
     region: Europe
@@ -32,11 +25,23 @@ builds:
     colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
     title: "SARS-CoV-2 B.1.617 Sequences in Belgium"
 
-  P.1:
-    region: Europe
-    country: Belgium
-    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-    title: "SARS-CoV-2 P.1 Sequences in Belgium"
+  # B.1.619-B.1.620:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 B.1.619 and B.1.620 Sequences Globally"
+
+  # B.1.620:
+  #   region: Europe
+  #   country: Lithuania
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 B.1.620"
+
+  # P.1:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 P.1 Sequences in Belgium"
 
 subsampling:
   # Here we use the default subsampling logic for countries
