Remove frequencies panel.

--- a/my_profiles/sars-cov-2-belgium/my_auspice_config.json
+++ b/my_profiles/sars-cov-2-belgium/my_auspice_config.json
@@ -103,13 +103,11 @@
     "division",
     "country",
     "region",
-    "host",
     "author"
   ],
   "panels": [
     "tree",
     "map",
-    "entropy",
-    "frequencies"
+    "entropy"
   ]
 }
