--- a/my_profiles/sars-cov-2-belgium/builds.yaml
+++ b/my_profiles/sars-cov-2-belgium/builds.yaml
@@ -25,11 +25,11 @@ builds:
   #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
   #   title: "SARS-CoV-2 B.1.214 (insertion variant) Sequences in Belgium"
 
-  B.1.617:
-    region: Europe
-    country: Belgium
-    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-    title: "SARS-CoV-2 B.1.617 Sequences in Belgium"
+  # B.1.617:
+  #   region: Europe
+  #   country: Belgium
+  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+  #   title: "SARS-CoV-2 B.1.617 Sequences in Belgium"
 
   # B.1.617.1:
   #   region: Europe
@@ -43,11 +43,11 @@ builds:
   #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
   #   title: "SARS-CoV-2 B.1.617.2 Sequences prior to May 2021"
 
-  # delta:
-  #   region: Europe
-  #   country: Belgium
-  #   colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
-  #   title: "SARS-CoV-2 Delta Sequences from India, France, and Belgium prior to May 2021"
+  delta:
+    region: Europe
+    country: Belgium
+    colors: "my_profiles/sars-cov-2-belgium/colors.tsv"
+    title: "SARS-CoV-2 Delta Sequences from India, France, and Belgium prior to May 2021"
 
   # B.1.619-B.1.620:
   #   region: Europe
